# ModGame_ToM_with_Signaling

./: .gitignore  README.md  main.py  pyproject.toml  utilities.py
agents/: agent.py  receiving_agents.py  regular_agents.py  signaling_agents.py
simulations/: regular_simulation.py  signaling_simulation.py  simulation.py
