[tool.poetry]
name = "modgame-tom-with-signaling"
version = "0.1.0"
description = ""
authors = ["Atakan Tekparmak <atakan@media2b.net>"]
readme = "README.md"
packages = [{include = "modgame_tom_with_signaling"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
